--- a/sample01/src/index.html
+++ b/sample01/src/index.html
@@ -1,12 +1,29 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Travel Website</title>
+
+
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/script.js"></script>
+
 </head>
+
 <body>
-    
+    <img id="logo" src="../resources/images/logo.png" width="165" height="58">
+
+    <div id="menu">
+        <a id="Home"><b>Home</b></a>
+        <a id="Seoul">Seoul</a>
+        <a id="Tokyo">Tokyo</a>
+        <a id="Paris">Paris</a>
+    </div>
+    <image id="photo" src="../resources/images/home.png" width="90%"></image>
 </body>
+
 </html>
